--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "server:abhishek": "json-server --watch db/abhishek.json --port 8000",
+    "server:rajat": "json-server db/rajat.json --port 8000"
   },
   "private": true,
   "dependencies": {
@@ -21,7 +23,10 @@
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
     "angularfire2": "^5.4.2",
+    "chart.js": "^2.9.4",
     "firebase": ">= 5.5.7 <8",
+    "json-server": "^0.16.3",
+    "ng2-charts": "^2.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
