--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --build-optimizer=false",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -13,6 +13,8 @@
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.19",
+    "@amcharts/amcharts4-geodata": "^4.1.20",
     "@angular/animations": "~11.2.8",
     "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.2.8",
